syntax = "proto3";

package com.grpc.user;

option java_multiple_files = true;
option java_package = "com.grpc.user";

// 用户服务定义
service UserService {
  // 获取单个用户
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // 创建用户
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  
  // 列出用户（服务器流式）
  rpc ListUsers(ListUsersRequest) returns (stream User);
}

// 请求和响应消息
message GetUserRequest {
  int64 user_id = 1;
}

message GetUserResponse {
  User user = 1;
  bool found = 2;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  int32 age = 3;
}

message CreateUserResponse {
  User user = 1;
  bool success = 2;
  string message = 3;
}

message ListUsersRequest {
  int32 page_size = 1;
  string page_token = 2;
}

// 用户实体
message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  int64 created_at = 5;
}
